# hermes-nim-channel

./: .gitignore  AGENTS.md  README.md  __init__.py  adapter.py  plugin.yaml  pyproject.toml
.sdd-runs/add-nim-connection-status-events/: task-ledger.md
.sdd-runs/add-nim-friend-auto-accept/: task-ledger.md
.sdd-runs/add-nim-login-antispam-options/: task-ledger.md
.sdd-runs/add-nim-private-deployment-endpoints/: task-ledger.md
.sdd-runs/add-nim-qchat-channel-info-resolution/: task-ledger.md
.sdd-runs/add-nim-read-receipts/: task-ledger.md
.sdd-runs/add-nim-team-name-resolution/: task-ledger.md
.sdd-runs/add-nim-text-chunking/: task-ledger.md
.sdd-runs/add-nim-text-reply-support/: task-ledger.md
.sdd-runs/add-nim-thread-topic-metadata/: task-ledger.md
.sdd-runs/add-nim-topic-media-reply/: task-ledger.md
.sdd-runs/add-nim-topic-text-reply/: task-ledger.md
.sdd-runs/align-nim-compat-p2p-policy/: task-ledger.md
.sdd-runs/complete-openclaw-parity-surface/: task-ledger.md
bridge/: index.mjs  package-lock.json  package.json
bridge/src/: config.mjs  media.mjs  protocol.mjs  qchat-runtime.mjs  qchat.mjs
bridge/test/: protocol.test.mjs  qchat.test.mjs  (+1 more)
docs/: HERMES_AGENT_INTEGRATION.md  SDD_WORKFLOW.md
gateway/: __init__.py  config.py
hermes_nim_channel/: __init__.py  config.py  inbound_media.py  qchat.py  session_titles.py  standalone.py  targets.py
openspec/: AGENTS.md  config.yaml  project.md
scripts/: sdd
tests/: test_nim_adapter.py  test_nim_bridge.py  test_nim_config.py  test_session_titles.py  test_standalone.py  test_targets.py
(+89 files in other folders)
