[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-nim-channel"
version = "0.2.0"
description = "Hermes Agent NIM platform plugin with a Node bridge for @yxim/nim-bot"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["hermes-agent", "nim", "yunxin", "netease", "plugin"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["hermes_nim_channel*"]

[tool.pytest.ini_options]
pythonpath = ["."]
